--- a/css/profile.css
+++ b/css/profile.css
@@ -33,47 +33,88 @@ a {
 .header {
     border-radius: 25px;
     margin: 0 auto;
-    height: 150px;
+    height: 350px;
     background-color: #fff;
     display: flex;
+    flex-wrap: wrap;
+    position: relative;
 }
 
-h1 {
-    padding-top: 20px;
-    font-weight: 500;
-    font-size: 32px;
-    text-align: justify;
-}
-
-#tweet-icon{
-    padding: 20px 30px;
-    width: 80px;
-    height: 80px;
+.background {
+    padding: 7px 27px 32px;
+    height: 180px;
+    width: 800px;
 }
 
 
-/* Header Nav
+.arrow {
+    width: 20px;
+}
+
+.profile-back {
+    width: 745px;
+    height: 180px;
+    object-fit: cover;
+    border-radius: 1.5%;
+}
+
+
+.pic {
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    overflow:hidden; 
+    position: absolute;
+    top: 154px;
+    left: 40px;
+}
+
+.profile-pic {
+    width: 200px;
+    height: 107px;
+    object-fit: cover;
+    object-position: 400% 150%;
+}
+
+.btn-block {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+.btn-edit {
+    padding: 8px 8px;
+    margin: 0 25px;
+    border: solid #90d3db;
+    border-radius: 10%;
+    background-color: #90d3db;
+    color: #fff;
+}
+
+/* Profile Info
 ============================ */
 
-.header-nav{
-    width: 140px;
-    padding-top: 100px;
-    padding-left: 126px;
-}
-
-.nav-list{
+.profile__bottom {
+    width: 800px;
     display: flex;
     justify-content: space-between;
-    list-style-type: none;
 }
 
-
-.nav-item:first-child::after{
-    content: ' |';
+.profile-info{
+    padding-left: 30px;
+    padding-top: 15px;
+    display: flex;
+    flex-direction: column;
+    font-size: 15px;
 }
 
-
-
+.name {
+    font-weight: 700;
+    font-size: 17px;
+}
+.calen {
+    padding-top: 5px;
+    width: 17px;
+}
 
 /* Content
 =========================== */
