--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,12 @@ body {
 a {
     text-decoration: none;
 }
+
+.btn {
+    font-size: 12px;
+}
+
+
 .main {
     background: #ADDBE1 url(../img/bc/page.png) repeat-x fixed;
     margin: 30px auto;
@@ -85,6 +91,28 @@ h1 {
     justify-content: space-between;
 }
 
+.content__left {
+    display: flex;
+    flex-direction: column;
+}
+
+.content-search {
+    border-radius: 23px;
+    background-color: #fff;
+    width: 220px;
+    height: 85px;
+    margin-bottom: 20px;
+}
+
+
+.inp-search {
+    margin: 10px 20px 13px;
+    width: 150px;
+    height: 30px;
+    border: none;
+    outline: none;
+}
+
 .content-form {
     border-radius: 25px;
     background-color: #fff;
@@ -98,13 +126,15 @@ h1 {
     background-color: #fff;
 }
 
-#inp-tweet {
+.inp-tweet {
     margin: 30px 25px;
     width: 150px;
     height: 100px;
+    border: none;
+    outline: none;
 }
 
-#btn-tweet {
+.btn-tweet {
     padding: 8px 8px;
     margin: 0 25px;
     border: solid #90d3db;
@@ -113,7 +143,6 @@ h1 {
     color: #fff;
 }
 
-
 /* Feed 
 ============================= */
 .feed-title {
@@ -121,6 +150,10 @@ h1 {
     margin: 15px 12px;
 }
 
+.feed__upper {
+    display: flex;
+    align-items: center;
+}
 .decor {
     background-color: #B6B5B5;
     height: 1.2px;
@@ -147,6 +180,7 @@ h1 {
 
 
 .pagin{
+    margin-left: 15%;
     padding-top: 10px;
     display: flex;
     justify-content: center;
