--- a/css/style.css
+++ b/css/style.css
@@ -257,3 +257,77 @@ h1 {
     opacity: 1;
     pointer-events: all;
 }
+
+
+/* Comment Pop Up
+============================= */
+.comment{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 200ms ease-in-out;
+    background: rgba(255, 255, 255, 0.7);
+    border-radius: 20px;
+    z-index: 10;
+    width: 475px;
+    height: 500px;
+}
+
+.comment.active {
+    transform: translate(-50%, -50%) scale(1);
+}
+
+
+.comment-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    font-size: 20px;
+}
+.comment-body {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.comment-input {
+    width: 450px;
+    height: 70px;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    padding-left: 10px;
+}
+
+
+/* Media 
+============================ */
+@media (max-width: 840px){
+    .content{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .feed {
+        margin-top: 20px;
+    }
+
+    .header {
+        width: 70%;
+    }
+    #tweet-icon {
+        width: 30px;
+        height: 30px;
+    }
+
+    h1{
+        font-size: 20px;
+    }
+
+    .header-nav{
+        padding-top: 90px;
+        padding-left: 70px;
+    }
+
+}
